[gd_scene load_steps=9 format=3 uid="uid://0nxneeed7uoa"]

[ext_resource type="Script" path="res://you_lose.gd" id="1_ts1l3"]
[ext_resource type="PackedScene" uid="uid://hbrjciajmnpf" path="res://scrolling_background.tscn" id="2_m7kvr"]
[ext_resource type="Texture2D" uid="uid://be6kqaxf8oiyh" path="res://assets/sprites/background_lose.png" id="3_xkqn1"]
[ext_resource type="PackedScene" uid="uid://dcxjxqadvhk87" path="res://level_label.tscn" id="4_36nkc"]
[ext_resource type="Texture2D" uid="uid://dydmvh0c4fan8" path="res://assets/sprites/sprite_wrong.png" id="5_xaxvx"]
[ext_resource type="Texture2D" uid="uid://b5utddt3asrh6" path="res://assets/sprites/sprite_valid.png" id="6_piku8"]
[ext_resource type="PackedScene" uid="uid://c6tacpe7tp1de" path="res://animated_button.tscn" id="7_8ccxa"]
[ext_resource type="PackedScene" uid="uid://dftsvelpx2cta" path="res://fade_transition.tscn" id="8_v64r8"]

[node name="YouLose" type="CanvasLayer"]
script = ExtResource("1_ts1l3")

[node name="CatchAllClick" type="TextureButton" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollingBackground" parent="." instance=ExtResource("2_m7kvr")]
mouse_filter = 2
texture = ExtResource("3_xkqn1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LevelLabel" parent="MarginContainer" instance=ExtResource("4_36nkc")]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.956863, 0.721569, 1)
theme_override_colors/font_outline_color = Color(0.635294, 0.184314, 0.788235, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 40
text = "You lost :("
horizontal_alignment = 1

[node name="LostReason" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.956863, 0.721569, 1)
theme_override_colors/font_outline_color = Color(0.635294, 0.184314, 0.788235, 1)
theme_override_font_sizes/font_size = 20
text = "
because"
horizontal_alignment = 1
autowrap_mode = 2

[node name="WrongContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Sprite2D" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer/WrongContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("5_xaxvx")

[node name="CardDisplayWrong" type="Control" parent="MarginContainer/CenterContainer/VBoxContainer/WrongContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
mouse_filter = 2

[node name="ValidContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Sprite2D" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer/ValidContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("6_piku8")

[node name="CardDisplayCorrect" type="Control" parent="MarginContainer/CenterContainer/VBoxContainer/ValidContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
mouse_filter = 2

[node name="TryAgainButton" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource("7_8ccxa")]
unique_name_in_owner = true
layout_mode = 2
text = "Try again"
color = Color(1, 0.956863, 0.721569, 1)
outline_color = Color(0.635294, 0.184314, 0.788235, 1)
focus_color = Color(1, 0.545098, 0.25098, 1)

[node name="FadeTransition" parent="." instance=ExtResource("8_v64r8")]
unique_name_in_owner = true
visible = false
